Implementacion de api /product/loan
