# api-inviertepe-bank/src/main/resources/openapi/api.yaml
@@ -124,13 +124,13 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Loan'
+              $ref: '#/components/schemas/LoanRequest'
           application/xml:
             schema:
-              $ref: '#/components/schemas/Loan'
+              $ref: '#/components/schemas/LoanRequest'
           application/x-www-form-urlencoded:
             schema:
-              $ref: '#/components/schemas/Loan'
+              $ref: '#/components/schemas/LoanRequest'
         required: true
       responses:
         '200':
@@ -138,10 +138,10 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Loan'          
+                $ref: '#/components/schemas/LoanResponse'          
             application/xml:
               schema:
-                $ref: '#/components/schemas/Loan'
+                $ref: '#/components/schemas/LoanResponse'
         '400':
           description: Invalid input
         '422':
@@ -410,7 +410,7 @@ components:
           example: 15000.00
       xml:
         name: creditCard
-    Loan:
+    LoanRequest:
       required:
         - customerId
         - type
@@ -419,14 +419,9 @@ components:
         - termMonths
       type: object
       properties:
-        id:
-          type: integer
-          format: int64
-          example: 100000
         customerId:
-          type: integer
-          format: int64
-          example: 100000
+          type: string
+          example: 67263e246a2d762658e31892
         type:
           type: string
           description: type of loan
@@ -447,8 +442,34 @@ components:
           format: int32
           example: 7
       xml:
-        name: BankAccount
-
+        name: Loan
+    LoanResponse:
+      type: object
+      properties:
+        id:
+          type: string
+          example: 67263e246a2d762658e31833
+        type:
+          type: string
+          description: type of loan
+          example: personal
+          enum:
+            - personal
+            - empresarial
+        amount:
+          type: number
+          format: double
+          example: 15000.00
+        interestRate:
+          type: number
+          format: float
+          example: 10.00
+        termMonths:
+          type: integer
+          format: int32
+          example: 7
+      xml:
+        name: Loan
     Balance:
       type: object
       properties:
